--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.Bunghole-Bingo {
+	background: url(../public/bunghole.jpg);
+	background-size: contain;
+}
