--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <main class="main">
   <div class="content">
     <div class="flex-container">
-        <div (click)="onSelect(n)" *ngFor="let n of cardRandom; let i = index" [ngClass]="{'select': n.selected}" class="squares">
+        <div (click)="onSelect(n, i)" *ngFor="let n of cardRandom; let i = index" [ngClass]="{'select': n.selected}" class="squares">
           <span>{{n.word}}</span>
         </div>
     </div>
     <div class="flex-container">
+      <h1 class="bingo">{{BINGO}}</h1>
       <button class="btn" (click)="onClick()">REFRESH</button>
     </div>
   </div>
