--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,6 +52,8 @@
         padding: 20px;
         word-break: break-word;
         text-transform: capitalize;
+        font-family: sans-serif !important;
+        font-weight: bolder !important;
       }
     }
   }
