--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,6 +11,21 @@
   .bingo {
     color: white;
     font-weight: bolder;
+    position: absolute;
+    top: 40%;
+    font-size: 21rem;
+    text-shadow: 10px 7px 11px #0d1428;
+    transform: rotate(-45deg);
+    animation-name: example;
+    animation-duration: 4s;
+  }
+
+  @keyframes example {
+    0%   {left:0px; top:0px;}
+    25%  {left:200px; top:0px;}
+    50%  {left:200px; top:200px;}
+    75%  {left:0px; top:200px;}
+    100% {left:0px; top:0px;}
   }
 
   div {
