--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,6 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .Bunghole-Bingo {
-	background: url(../public/bunghole.jpg);
+	background: url(../public/ERECTION.png);
 	background-size: contain;
 }
