--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,5 +4,5 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .Bunghole-Bingo {
 	background: url(../public/ERECTION.png);
-	background-size: contain;
+	background-size: cover;
 }
