--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,7 +52,8 @@
       justify-content: center;
       font-family: "arial-black" !important;
       padding: 0;
-      font-size: 22px;
+      font-size: 16px;
+      line-height: 16px;
       margin: 5px auto -3px auto;
       text-align: center;
       cursor: pointer;
